# npmgen-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  action.yml
.github/workflows/: release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  pipeline.rs
crates/core/src/compile/: cargo.rs  driver.rs  mod.rs
crates/core/src/config/: launcher.rs  manifest_spec.rs  mod.rs  target_spec.rs
crates/core/src/npm/: launcher.rs  meta.rs  mod.rs  platform.rs  substitute.rs  writer.rs
crates/core/src/project/: author.rs  builder.rs  identity.rs  mod.rs  workspace.rs
crates/core/tests/: generate.rs
crates/core/tests/fixture_badmember/: Cargo.toml
crates/core/tests/fixture_badmember/bad/: Cargo.toml
crates/core/tests/fixture_badmember/good/: Cargo.toml
crates/core/tests/fixture_crate/: Cargo.toml  launch.mjs
crates/core/tests/fixture_crate/.claude-plugin/: plugin.json
crates/core/tests/fixture_crate/hooks/: hooks.json
crates/core/tests/fixture_dup/: Cargo.toml
crates/core/tests/fixture_dup/d1/: Cargo.toml
crates/core/tests/fixture_dup/d2/: Cargo.toml
crates/core/tests/fixture_multibin/: Cargo.toml
crates/core/tests/fixture_multibin/extra/: Cargo.toml
crates/core/tests/fixture_multibin/plain/: Cargo.toml
crates/core/tests/fixture_multibin/priv/: Cargo.toml
crates/core/tests/fixture_plain/: Cargo.toml
crates/core/tests/fixture_workspace/: Cargo.toml
crates/core/tests/fixture_workspace/.claude-plugin/: plugin.json
crates/core/tests/fixture_workspace/app/: Cargo.toml
