[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Generate the npm publish tree (meta + per-platform packages) that ships a prebuilt Rust binary."
repository = "https://github.com/GGLinnk/npmgen-rs"
authors = ["Gabriel GRONDIN <gglinnk@protonmail.com>"]

[workspace.dependencies]
cargo_metadata = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
npmgen-core = { path = "crates/core" }

[workspace.lints.rust]
unsafe_code = "forbid"
