[package]
name = "npmgen-cli"
description = "Command-line driver for npmgen: standalone `npmgen` and the `cargo npmgen` subcommand."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "npmgen_cli"
path = "src/lib.rs"

[[bin]]
name = "npmgen"
path = "src/bin/npmgen.rs"

[[bin]]
name = "cargo-npmgen"
path = "src/bin/cargo-npmgen.rs"

[dependencies]
npmgen-core = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
