# Standalone fixture: its own `[workspace]` keeps it out of the npmgen workspace.
# Identity mirrors nocmd so the generated tree can be checked for parity.
[workspace]

[package]
name = "fixture"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "PreToolUse Bash hook that redirects discouraged shell commands to Claude's dedicated tools and to configured MCP servers."
repository = "https://github.com/gglinnk/nocmd"
authors = ["Gabriel GRONDIN <gglinnk@protonmail.com>"]

[[bin]]
name = "nocmd"
path = "src/main.rs"

[package.metadata.npmgen]
launcher = { file = "launch.mjs" }
include = ["hooks"]
manifests = [".claude-plugin/plugin.json"]
